--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
             </div>
         </header>
         <main>
+            <section class="slide_menu">
+                <div class="container">
+                    <div class="row">
+                        <div class="slide_menu_item">
+                            <div class="poss col-4">
+                                <h1>Услуги и цены</h1>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                            </div>
+                            <div class="poss col-4">
+                                <h1>Информация</h1>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                            </div>
+                            <div class="poss col-4">
+                                <h1>Важно</h1>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                                <a href="#">Lorem ipsum dolor sit amet</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
             <section class="greetings">
                 <div class="container">
                     <div class="row">
@@ -67,10 +97,10 @@
                             <div class="left_content_text">Выбери понравившуюся услугу, запишись онлайн и получи скидку 10% на первый визит! </div>
                             <div class="left_content_subtext">
                                 <ul>
-                                    <li>Пункт</li>
-                                    <li>Пункт</li>
-                                    <li>Пункт</li>
-                                    <li>Пункт</li>
+                                    <li>Lorem ipsum dolor sit amet</li>
+                                    <li>Lorem ipsum dolor sit amet</li>
+                                    <li>Lorem ipsum dolor sit amet</li>
+                                    <li>Lorem ipsum dolor sit amet</li>
                                 </ul>
                             </div>
                             <button class="btn">Записаться</button>
@@ -87,11 +117,11 @@
                 </div>
             </section>
             <section class="asd">
-                test
+                text
             </section>
         </main>
     </div>
-
+    <script src="js/script_btn.js"></script>
     <script src="https://kit.fontawesome.com/7eefcfc2b8.js" crossorigin="anonymous"></script>
 </body>
 </html>
